CHANGES IN VERSION 1.14.0
-------------------------

NEW FEATURES

    o seqinfo(FaFile) returns available information on sequences and
    lengths on Fa (indexed fasta) files.

    o filterBam accepts FilterRules call-backs for arbitrary
    filtering.

    o add isIncomplete,BamFile-method to test for end-of-file

    o add count.mapped.reads to summarizeOverlaps,BamFileList-method;
    set to TRUE to collect read and nucleotide counts via countBam.

BUG FIXES

    o scanVcfHeader tolerates records without ID fields, and with
    fields named similar to ID.

    o close razip files only once.

CHANGES IN VERSION 1.12.0
-------------------------

NEW FEATURES

    o BamSampler draws a random sample from BAM file records, obeying
    any restriction by ScanBamParam().

    o Add argument 'obeyQname' to BamFile. Used with qname-sorted
    Bam files only.

    o Add readBamGAlignmentsList function for reading qname-sorted
    Bam files into a GAlignmentsList object. 

USER-VISIBLE CHANGES

    o bamPath and bamIndicies applied to BamViews returns named
      vectors.

    o 'yieldSize' argument in BamFile represents the number of
    unique qnames when 'obeyQname=TRUE'. 

BUG FIXES

    o completely free razip, bgzip files when done.

    o sortBam, indexBam fail gracefully on non-BAM input.

    o headerTabix on an open TabixFile no longer reads the first
    record

    o scanBcfHeader provides informative error message when header
    line ('#CHROM POS ...') is missing

CHANGES IN VERSION 1.10.0
-------------------------

NEW FEATURES

    o BamFile and TabixFile accept argument yieldSize; repeated calls
      to scanBam and scanTabix return successive yieldSize chunks of
      the file. readBamGappedAlignments, VariantAnnotation::readVcf
      automatically gain support for yield'ing through files.

    o Add getDumpedAlignments(), countDumpedAlignments(), and
      flushDumpedAlignments() low-level utilities for manipulating